# VirtualWing

./: .gitignore  README.md  _capture.py  config.json  connection.py  logger.py  main.py  pyproject.toml  quad.py  requirement.txt  sample.txt  shared.py  waypoint.py
cam/: _capture.py  obj_detect.py  vision.py  vision_thread.py
checks/: checks.py
drone_survey/: const.py  geotag.py  survey.py  waypoints.py
quad/: connection.py  quad.py  state.py  survey.py  survey_thread.py  telemetry_thread.py
